# Compiler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  all.c  ast.h  compiler.c  compiler.h  lexer.c  lexer.h  makefile  notes.txt  parser.c  parser.h  success.txt  symbol.c  symbol.h
CMakeModules/: CodeCoverage.cmake
cmake/: FindCompiler.cmake  FindGTest.cmake  functions.cmake  setup.cmake
data/: fuzz.sh
dependencies/: CMakeLists.txt
examples/: empty_function.x  expression_0.x  if_0.x  if_1.x  if_2.x  if_3.x  simple.x  simple0.x  var_decl.x  var_decl_no_init.x  while0.x
scripts/: display_parse_tree.py  gen_test_lists.py
src/: CMakeLists.txt  allocator.c  allocator.h  ast.c  ast.h  common.h  compiler.c  errors.h  eval.c  eval.h  eval_main.c  helpers.h  intermediate.c  intermediate.h  lexer.c  lexer.h  lexer_main.c  list.c  list.h  main.c  operators.c  operators.h  parser.c  parser.h  parser_main.c  parser_test_main.c  sema.c  sema.h  sema_main.c  string_common.c  string_common.h  symbol.c  symbol.h  symbol_table.c  symbol_table.h  type.h
src/python/: CMakeLists.txt  main.c
tests/: CMakeLists.txt  all.c  all0.c  binop.c  binop1.c  comment.c  fail.list  fib.c  lexer.cpp  parser.cpp  simple.c  string.c  success.list  tests.c  todo.c
tests/eval/: CMakeLists.txt  README.txt  add_test.sh  addition_0.x  call_print.x  fibbonacci.x  main.c  mult_0.x  run_test.py  simple0.x
tests/eval/addition_0/: addition_0.x
tests/eval/call_print/: main.x
tests/eval/early_return/: main.x
tests/eval/fibbonacci/: main.x
tests/eval/function_call_0/: function_call_0.x  main.x
tests/eval/mult_0/: main.x
tests/eval/operator_prec_0/: main.x  operator_prec_0.x
tests/eval/scratch/: main.x
tests/eval/simple0/: main.x  simple0.x
tests/scripts/: run_test.py
tests/sema/: CMakeLists.txt  main.c
tests/sema/simple/: main.x
tests/subexpressions/: CMakeLists.txt  main.c
tests/subexpressions/parse_braced_stmt_list/: test_1.x  test_2.x
tests/subexpressions/parse_func_call/: test_2.x
tests/subexpressions/parse_function/: test_0.x
tests/subexpressions/parse_if/: test_0.x  test_1.x  test_2.x
tests/success/: assign.c  binop.c  binop0.c  current.c  decl0.c  do.c  else.c  empty_functions.c  fib.c  for.c  function_call.c  if.c  imports.c  literal.c  main.c  namespace.c  newline_before_import.c  paren_expression.c  return.c  return_expression_list.c  simple.c  simple_function.c  todo.c  type_mods.c  while.c
tests/unit_tests/: CMakeLists.txt  parser.cpp  subexpressions.cpp
